--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
     "mongoose": "^4.8.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lovenery/api-template.git"
+  },
 }
