--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.16.0",
+    "dotenv": "^4.0.0",
     "express": "^4.14.1",
+    "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.8.1"
   },
   "repository": {
