--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express-limiter": "^1.6.0",
     "jsonwebtoken": "^7.2.1",
     "mongoose": "^4.8.1",
-    "redis": "^2.6.5"
+    "redis": "^2.6.5",
+    "request": "^2.79.0"
   },
   "repository": {
     "type": "git",
