--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "dotenv": "^4.0.0",
+    "ejs": "^2.5.6",
     "express": "^4.14.1",
     "express-limiter": "^1.6.0",
     "jsonwebtoken": "^7.2.1",
