--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "hsu-template",
   "version": "0.1.0",
   "description": "test",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon index.js"
   },
   "author": "lovenery",
   "license": "ISC",
