--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-PORT=3000
-DB_HOST=mongodb://localhost/hsu-template
 APP_KEY=SomeRandomString
+APP_URL=http://localhost
+PORT=3000
 NODE_ENV=development
+DB_HOST=mongodb://localhost/hsu-template
